clang/test/BSC/Negative/Ownership/Owned/owned_uninit_cast/owned_uninit_cast.cbs
// RUN: %clang_cc1 -verify %s

void exhaust(void *_Owned);

void basic() {
    int *_Owned uninit;
    exhaust((void *_Owned)uninit); // expected-error {{invalid cast to `void * _Owned` of uninit value: `uninit`}}
}

struct Foo {
    int x;
};

void custom() {
    struct Foo *_Owned uninit;
    exhaust((void *_Owned)uninit); // expected-error {{invalid cast to `void * _Owned` of uninit value: `uninit`}}
}

int main() {
    basic();
    custom();
    return 0;
}
